# OpenSandbox

./: AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.test.yaml
.github/: CODEOWNERS
.github/workflows/: egress-test.yaml.yml  kubernetes-nightly-build.yml  kubernetes-test.yml  publish-cli.yml  publish-server.yml  real-e2e.yml  runner-system-prune.yml  sdk-tests.yml  server-test.yml
cli/: README.md  pyproject.toml
cli/src/opensandbox_cli/: client.py  config.py  main.py  output.py  skill_registry.py  utils.py
cli/src/opensandbox_cli/commands/: code.py  command.py  config_cmd.py  devops.py  egress.py  file.py  sandbox.py  skills.py
cli/src/opensandbox_cli/skills/: opensandbox-command-execution.md  opensandbox-file-operations.md  opensandbox-network-egress.md  opensandbox-sandbox-lifecycle.md  opensandbox-sandbox-troubleshooting.md
cli/tests/: conftest.py  test_cli_help.py  test_commands.py  test_config.py  test_output.py  test_resolve_id.py  test_skills.py  test_utils.py
components/egress/: RELEASE_NOTES.md  go.mod  go.sum  main.go  nft.go  policy_server.go  policy_server_test.go  policy_utils.go  shutdown.go
components/egress/docs/: opentelemetry.md
components/egress/tests/: smoke-dns-upstream-probe.sh  smoke-dns.sh
components/execd/: DEVELOPMENT.md  RELEASE_NOTES.md  bootstrap.sh  go.mod  go.sum  main.go
components/ingress/: README.md  RELEASE_NOTES.md  go.mod  go.sum  main.go
components/internal/: go.mod  go.sum
components/internal/logger/: zap.go
components/internal/safego/: safe.go  safe_test.go
components/internal/telemetry/: init.go
docs/: README_zh.md  devops-diagnostics-example.md  manual-cleanup-refactor-guide.md  secure-container.md
docs/.vitepress/scripts/: docs-manifest.mjs
docs/public/api/: spec-inline.js
examples/: README.md
examples/agent-sandbox/: README.md
examples/code-interpreter/: README.md
examples/desktop/: main.py
examples/host-volume-mount/: README.md  README_zh.md
examples/openclaw/: README.md  README_zh.md  main.py
examples/qwen-code/: README.md  main.py
kubernetes/: Makefile  README-ZH.md  README.md  build.sh  go.mod  go.sum
kubernetes/charts/opensandbox-server/: values.yaml
kubernetes/internal/controller/: allocator.go  (+5 more)
oseps/: 0001-fqdn-based-egress-control.md  0004-secure-container-runtime.md  0006-developer-console.md  0007-fast-sandbox-runtime-support.md  0010-opentelemetry-instrumentation.md
sandboxes/code-interpreter/: Dockerfile  README.md  README_zh.md
scripts/: bump-component-version.sh  bump-server-chart.sh  csharp-e2e.sh  java-e2e.sh  javascript-e2e.sh  python-e2e.sh  python-k8s-e2e-ingress.sh  python-k8s-e2e.sh
scripts/common/: kubernetes-e2e.sh
sdks/: AGENTS.md  Directory.Build.props  package.json
server/: AGENTS.md  DEVELOPMENT.md  Dockerfile  README.md  README_zh.md  RELEASE_NOTES.md  configuration.md  docker-compose.example.yaml  example.config.k8s.toml  example.config.k8s.zh.toml  example.config.toml  example.config.zh.toml  pyproject.toml
server/opensandbox_server/: __init__.py  cli.py  config.py  logging_config.py  main.py
server/src/: config.py
server/tests/: conftest.py  test_agent_sandbox_service.py  test_auth_middleware.py  test_config.py  test_docker_endpoint.py  test_docker_path_fix.py  test_docker_service.py  test_endpoint.py  test_endpoint_auth.py  test_extensions.py  test_helpers.py  test_ingress.py  test_integrations_redis.py  test_pool_api.py  test_proxy_renew_coordinator.py  test_renew_intent.py  test_routes.py  test_routes_create_delete.py  test_routes_endpoint_behavior.py  test_routes_get_sandbox.py  test_routes_list_sandboxes.py  test_routes_pause_resume.py  test_routes_proxy.py  test_routes_renew_expiration.py  test_schema.py
skills/troubleshoot-sandbox/: SKILL.md
specs/: AGENTS.md  README.md  README_zh.md  diagnostic-api.yml  execd-api.yaml  sandbox-lifecycle.yml
tests/java/: gradle.properties
(+260 files in other folders)
